--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,4 @@ phpunit.phar
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+*.xcuserstate
